# cagoule-api

cagoule-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  start_api.sh
cagoule-api/cagoule_api/: __init__.py  auth.py  crypto.py  errors.py  models.py  server.py
cagoule-api/scripts/: gen_certs.sh  node_client_demo.js
cagoule-api/tests/: test_api.py  test_crypto.py
