[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule-api"
version = "1.0.0-dev"
description = "API REST locale exposant les primitives cryptographiques CAGOULE — Usage interne/académique uniquement"
authors = [{ name = "Slim Issa", email = "slim@quantos.dev" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — Internal/Academic Use Only" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "cagoule>=1.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
cagoule-api = "cagoule_api.server:main"

[project.urls]
Homepage = "https://github.com/slimissa/cagoule-api"
Repository = "https://github.com/slimissa/cagoule-api"
Documentation = "https://github.com/slimissa/cagoule-api#readme"

[tool.setuptools]
packages = ["cagoule_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["cagoule_api"]pip install --upgrade pip
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
